# Ares

./: README.md  install_service.sh  package.xml  setup.cfg  setup.py
config/: joystick.yaml
launch/: joystick.launch.py  real.launch.py  rover.launch.py  sim.launch.py
rover_drive/: rover_drive_node.py
rover_drive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: launch_joystick.sh  update.sh
systemd/: rover_drive.service
