<?xml version="1.0"?>
<package format="3">
  <name>rover_drive</name>
  <version>0.4.0</version>
  <description>Ackermann drive node for autonomous rescue rover</description>
  <maintainer email="contact@usnargentum.no">Argentum</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
